--- a/trunk/Obi/Obi/Dialogs/PhraseProperties.resx
+++ b/trunk/Obi/Obi/Dialogs/PhraseProperties.resx
@@ -123,14 +123,14 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="m_lblParentSection.Location" type="System.Drawing.Point, System.Drawing">
-    <value>22, 17</value>
+    <value>33, 27</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="m_lblParentSection.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>6, 0, 6, 0</value>
   </data>
   <data name="m_lblParentSection.Size" type="System.Drawing.Size, System.Drawing">
-    <value>119, 16</value>
+    <value>176, 25</value>
   </data>
   <data name="m_lblParentSection.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -157,13 +157,13 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="m_txtParentSection.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 15</value>
+    <value>240, 23</value>
   </data>
   <data name="m_txtParentSection.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>6, 6, 6, 6</value>
   </data>
   <data name="m_txtParentSection.Size" type="System.Drawing.Size, System.Drawing">
-    <value>355, 22</value>
+    <value>532, 30</value>
   </data>
   <data name="m_txtParentSection.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -184,13 +184,13 @@
     <value>True</value>
   </data>
   <data name="m_lblLocationInsideSection.Location" type="System.Drawing.Point, System.Drawing">
-    <value>82, 54</value>
+    <value>123, 84</value>
   </data>
   <data name="m_lblLocationInsideSection.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>6, 0, 6, 0</value>
   </data>
   <data name="m_lblLocationInsideSection.Size" type="System.Drawing.Size, System.Drawing">
-    <value>59, 16</value>
+    <value>87, 25</value>
   </data>
   <data name="m_lblLocationInsideSection.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -217,13 +217,13 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="m_txtLocationInsideSection.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 54</value>
+    <value>240, 84</value>
   </data>
   <data name="m_txtLocationInsideSection.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>6, 6, 6, 6</value>
   </data>
   <data name="m_txtLocationInsideSection.Size" type="System.Drawing.Size, System.Drawing">
-    <value>355, 22</value>
+    <value>532, 30</value>
   </data>
   <data name="m_txtLocationInsideSection.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -247,13 +247,13 @@
     <value>True</value>
   </data>
   <data name="m_lblPhraseRole.Location" type="System.Drawing.Point, System.Drawing">
-    <value>61, 281</value>
+    <value>92, 439</value>
   </data>
   <data name="m_lblPhraseRole.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>6, 0, 6, 0</value>
   </data>
   <data name="m_lblPhraseRole.Size" type="System.Drawing.Size, System.Drawing">
-    <value>80, 16</value>
+    <value>117, 25</value>
   </data>
   <data name="m_lblPhraseRole.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -286,16 +286,16 @@
     <value>False</value>
   </data>
   <data name="m_comboPhraseRole.ItemHeight" type="System.Int32, mscorlib">
-    <value>16</value>
+    <value>25</value>
   </data>
   <data name="m_comboPhraseRole.Location" type="System.Drawing.Point, System.Drawing">
-    <value>161, 313</value>
+    <value>242, 489</value>
   </data>
   <data name="m_comboPhraseRole.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>6, 6, 6, 6</value>
   </data>
   <data name="m_comboPhraseRole.Size" type="System.Drawing.Size, System.Drawing">
-    <value>355, 24</value>
+    <value>530, 33</value>
   </data>
   <data name="m_comboPhraseRole.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -319,13 +319,13 @@
     <value>True</value>
   </data>
   <data name="m_lblCustomClassName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>15, 316</value>
+    <value>22, 494</value>
   </data>
   <data name="m_lblCustomClassName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>6, 0, 6, 0</value>
   </data>
   <data name="m_lblCustomClassName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 16</value>
+    <value>190, 25</value>
   </data>
   <data name="m_lblCustomClassName.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -355,13 +355,13 @@
     <value>Flat</value>
   </data>
   <data name="m_chkUsed.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 410</value>
+    <value>240, 643</value>
   </data>
   <data name="m_chkUsed.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>6, 6, 6, 6</value>
   </data>
   <data name="m_chkUsed.Size" type="System.Drawing.Size, System.Drawing">
-    <value>57, 20</value>
+    <value>74, 29</value>
   </data>
   <data name="m_chkUsed.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -391,13 +391,13 @@
     <value>Flat</value>
   </data>
   <data name="m_chkToDo.Location" type="System.Drawing.Point, System.Drawing">
-    <value>268, 410</value>
+    <value>402, 643</value>
   </data>
   <data name="m_chkToDo.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>6, 6, 6, 6</value>
   </data>
   <data name="m_chkToDo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>60, 20</value>
+    <value>79, 29</value>
   </data>
   <data name="m_chkToDo.TabIndex" type="System.Int32, mscorlib">
     <value>19</value>
@@ -424,13 +424,13 @@
     <value>Flat</value>
   </data>
   <data name="m_btnOk.Location" type="System.Drawing.Point, System.Drawing">
-    <value>149, 438</value>
+    <value>224, 684</value>
   </data>
   <data name="m_btnOk.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>6, 6, 6, 6</value>
   </data>
   <data name="m_btnOk.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 28</value>
+    <value>150, 44</value>
   </data>
   <data name="m_btnOk.TabIndex" type="System.Int32, mscorlib">
     <value>20</value>
@@ -457,13 +457,13 @@
     <value>Flat</value>
   </data>
   <data name="m_btnCancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>268, 438</value>
+    <value>402, 684</value>
   </data>
   <data name="m_btnCancel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>6, 6, 6, 6</value>
   </data>
   <data name="m_btnCancel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 28</value>
+    <value>150, 44</value>
   </data>
   <data name="m_btnCancel.TabIndex" type="System.Int32, mscorlib">
     <value>21</value>
@@ -490,13 +490,13 @@
     <value>True</value>
   </data>
   <data name="m_lblTimeLength.Location" type="System.Drawing.Point, System.Drawing">
-    <value>80, 241</value>
+    <value>120, 377</value>
   </data>
   <data name="m_lblTimeLength.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>6, 0, 6, 0</value>
   </data>
   <data name="m_lblTimeLength.Size" type="System.Drawing.Size, System.Drawing">
-    <value>61, 16</value>
+    <value>91, 25</value>
   </data>
   <data name="m_lblTimeLength.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -523,13 +523,13 @@
     <value>Bottom, Left, Right</value>
   </data>
   <data name="m_txtTimeLength.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 241</value>
+    <value>240, 377</value>
   </data>
   <data name="m_txtTimeLength.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>6, 6, 6, 6</value>
   </data>
   <data name="m_txtTimeLength.Size" type="System.Drawing.Size, System.Drawing">
-    <value>355, 22</value>
+    <value>532, 30</value>
   </data>
   <data name="m_txtTimeLength.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -553,10 +553,13 @@
     <value>Flat</value>
   </data>
   <data name="m_comboCustomClassName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 277</value>
+    <value>240, 433</value>
+  </data>
+  <data name="m_comboCustomClassName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="m_comboCustomClassName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>355, 24</value>
+    <value>530, 33</value>
   </data>
   <data name="m_comboCustomClassName.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -576,6 +579,36 @@
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="m_lbParentsList.AccessibleName" xml:space="preserve">
+    <value>Ancestor sections:</value>
+  </data>
+  <data name="m_lbParentsList.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Bottom, Left, Right</value>
+  </data>
+  <data name="m_lbParentsList.ItemHeight" type="System.Int32, mscorlib">
+    <value>25</value>
+  </data>
+  <data name="m_lbParentsList.Location" type="System.Drawing.Point, System.Drawing">
+    <value>222, 39</value>
+  </data>
+  <data name="m_lbParentsList.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>6, 6, 6, 6</value>
+  </data>
+  <metadata name="helpProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>181, 17</value>
+  </metadata>
+  <data name="helpProvider1.HelpNamespace" xml:space="preserve">
+    <value>Obi Help.chm</value>
+  </data>
+  <data name="m_lbParentsList.ShowHelp" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="m_lbParentsList.Size" type="System.Drawing.Size, System.Drawing">
+    <value>522, 127</value>
+  </data>
+  <data name="m_lbParentsList.TabIndex" type="System.Int32, mscorlib">
+    <value>7</value>
+  </data>
   <data name="&gt;&gt;m_lbParentsList.Name" xml:space="preserve">
     <value>m_lbParentsList</value>
   </data>
@@ -589,13 +622,19 @@
     <value>0</value>
   </data>
   <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 113</value>
+    <value>18, 177</value>
+  </data>
+  <data name="groupBox1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
+  <data name="groupBox1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="groupBox1.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>504, 115</value>
+    <value>756, 180</value>
   </data>
   <data name="groupBox1.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -615,53 +654,17 @@
   <data name="&gt;&gt;groupBox1.ZOrder" xml:space="preserve">
     <value>8</value>
   </data>
-  <metadata name="helpProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>181, 17</value>
-  </metadata>
-  <data name="m_lbParentsList.AccessibleName" xml:space="preserve">
-    <value>Ancestor sections:</value>
-  </data>
-  <data name="m_lbParentsList.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Bottom, Left, Right</value>
-  </data>
-  <data name="m_lbParentsList.ItemHeight" type="System.Int32, mscorlib">
-    <value>16</value>
-  </data>
-  <data name="m_lbParentsList.Location" type="System.Drawing.Point, System.Drawing">
-    <value>148, 25</value>
-  </data>
-  <data name="m_lbParentsList.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
-  </data>
-  <data name="m_lbParentsList.ShowHelp" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="m_lbParentsList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>349, 82</value>
-  </data>
-  <data name="m_lbParentsList.TabIndex" type="System.Int32, mscorlib">
-    <value>7</value>
-  </data>
-  <data name="&gt;&gt;m_lbParentsList.Name" xml:space="preserve">
-    <value>m_lbParentsList</value>
-  </data>
-  <data name="&gt;&gt;m_lbParentsList.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ListBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;m_lbParentsList.Parent" xml:space="preserve">
-    <value>groupBox1</value>
-  </data>
-  <data name="&gt;&gt;m_lbParentsList.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
   <data name="m_lblPageNumberDetails.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="m_lblPageNumberDetails.Location" type="System.Drawing.Point, System.Drawing">
-    <value>8, 346</value>
+    <value>12, 541</value>
+  </data>
+  <data name="m_lblPageNumberDetails.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="m_lblPageNumberDetails.Size" type="System.Drawing.Size, System.Drawing">
-    <value>135, 16</value>
+    <value>196, 25</value>
   </data>
   <data name="m_lblPageNumberDetails.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -688,10 +691,13 @@
     <value>Page number details:</value>
   </data>
   <data name="m_txtPageNumberDetails.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 346</value>
+    <value>240, 541</value>
+  </data>
+  <data name="m_txtPageNumberDetails.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="m_txtPageNumberDetails.Size" type="System.Drawing.Size, System.Drawing">
-    <value>232, 22</value>
+    <value>346, 30</value>
   </data>
   <data name="m_txtPageNumberDetails.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -718,10 +724,13 @@
     <value>True</value>
   </data>
   <data name="m_chkChangePageNumber.Location" type="System.Drawing.Point, System.Drawing">
-    <value>398, 348</value>
+    <value>597, 544</value>
+  </data>
+  <data name="m_chkChangePageNumber.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="m_chkChangePageNumber.Size" type="System.Drawing.Size, System.Drawing">
-    <value>130, 20</value>
+    <value>189, 29</value>
   </data>
   <data name="m_chkChangePageNumber.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -748,10 +757,13 @@
     <value>True</value>
   </data>
   <data name="m_lbl_ReferredNote.Location" type="System.Drawing.Point, System.Drawing">
-    <value>50, 346</value>
+    <value>75, 541</value>
+  </data>
+  <data name="m_lbl_ReferredNote.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="m_lbl_ReferredNote.Size" type="System.Drawing.Size, System.Drawing">
-    <value>93, 16</value>
+    <value>135, 25</value>
   </data>
   <data name="m_lbl_ReferredNote.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -774,20 +786,17 @@
   <data name="&gt;&gt;m_lbl_ReferredNote.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
-  <metadata name="helpProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>181, 17</value>
-  </metadata>
-  <data name="helpProvider1.HelpNamespace" xml:space="preserve">
-    <value>Obi Help.chm</value>
-  </data>
   <data name="m_lblCurrentCursorPosition.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="m_lblCurrentCursorPosition.Location" type="System.Drawing.Point, System.Drawing">
-    <value>2, 88</value>
+    <value>3, 138</value>
+  </data>
+  <data name="m_lblCurrentCursorPosition.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="m_lblCurrentCursorPosition.Size" type="System.Drawing.Size, System.Drawing">
-    <value>143, 16</value>
+    <value>214, 25</value>
   </data>
   <data name="m_lblCurrentCursorPosition.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -811,10 +820,13 @@
     <value>Current cursor position</value>
   </data>
   <data name="m_txtCurrentCursorPosition.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 88</value>
+    <value>240, 138</value>
+  </data>
+  <data name="m_txtCurrentCursorPosition.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="m_txtCurrentCursorPosition.Size" type="System.Drawing.Size, System.Drawing">
-    <value>355, 22</value>
+    <value>530, 30</value>
   </data>
   <data name="m_txtCurrentCursorPosition.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -835,10 +847,13 @@
     <value>True</value>
   </data>
   <data name="m_lbl_FileName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>74, 382</value>
+    <value>111, 597</value>
+  </data>
+  <data name="m_lbl_FileName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="m_lbl_FileName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 16</value>
+    <value>103, 25</value>
   </data>
   <data name="m_lbl_FileName.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -859,13 +874,16 @@
     <value>1</value>
   </data>
   <data name="m_txtFileName.AccessibleName" xml:space="preserve">
-    <value>Edit file name</value>
+    <value>file name</value>
   </data>
   <data name="m_txtFileName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 382</value>
+    <value>240, 597</value>
+  </data>
+  <data name="m_txtFileName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="m_txtFileName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>355, 22</value>
+    <value>530, 30</value>
   </data>
   <data name="m_txtFileName.TabIndex" type="System.Int32, mscorlib">
     <value>17</value>
@@ -889,16 +907,16 @@
     <value>25</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 16</value>
+    <value>12, 25</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>528, 479</value>
+    <value>792, 748</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>6, 6, 6, 6</value>
   </data>
   <data name="$this.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
